# ezlog

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
docs/source/quickguide/: firststeps.rst  parent_groups.rst
docs/source/reference/: ezlog_module.rst
examples/: groups_filelogging.py  presentation.py
ezlog/: __init__.py  _types.py  defaults.py  exceptions.py  handlers.py  logger.py  loggergroup.py  utils.py
